--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,7 +3,6 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": ["es6", "dom"],
     "mapRoot": "./",
     "module": "es6",
     "moduleResolution": "node",
@@ -12,6 +11,10 @@
     "target": "es5",
     "typeRoots": [
       "../node_modules/@types"
+    ],
+    "types": [
+      "core-js",
+      "jasmine"
     ]
   }
 }
